Widget - Add widget

--- a/SocialDistance/src/main/AndroidManifest.xml
+++ b/SocialDistance/src/main/AndroidManifest.xml
@@ -76,6 +76,14 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name=".widget.AppWidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/app_widget_info" />
+        </receiver>
+
         <meta-data
             android:name="com.google.mlkit.vision.DEPENDENCIES"
             android:value="barcode" />
