--- a/SocialDistance/src/main/AndroidManifest.xml
+++ b/SocialDistance/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <meta-data android:name="android.app.shortcuts"
+            <meta-data
+                android:name="android.app.shortcuts"
                 android:resource="@xml/shortcuts" />
         </activity>
 
@@ -76,11 +77,12 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".widget.AppWidgetProvider" >
+        <receiver android:name=".widget.AppWidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
-            <meta-data android:name="android.appwidget.provider"
+            <meta-data
+                android:name="android.appwidget.provider"
                 android:resource="@xml/app_widget_info" />
         </receiver>
 
