--- a/SocialDistance/src/main/AndroidManifest.xml
+++ b/SocialDistance/src/main/AndroidManifest.xml
@@ -86,6 +86,19 @@
                 android:resource="@xml/app_widget_info" />
         </receiver>
 
+        <service
+            android:name=".tile.BarcodeTileService"
+            android:icon="@drawable/icon_qrcode"
+            android:label="@string/barcode_shortcut_label"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.service.quicksettings.ACTIVE_TILE"
+                android:value="true" />
+        </service>
+
         <meta-data
             android:name="com.google.mlkit.vision.DEPENDENCIES"
             android:value="barcode" />
