Barcode - Change `BarcodeScanningActivity` launch mode to `singleTask`

--- a/SocialDistance/src/main/AndroidManifest.xml
+++ b/SocialDistance/src/main/AndroidManifest.xml
@@ -64,7 +64,8 @@
             android:label="@string/menu_control" />
         <activity
             android:name=".activity.BarcodeScanningActivity"
-            android:label="@string/menu_barcode_scanning" />
+            android:label="@string/menu_barcode_scanning"
+            android:launchMode="singleTask"/>
 
         <receiver
             android:name=".nearby.ExposureNotificationBroadcastReceiver"
