--- a/SocialDistance/build.gradle
+++ b/SocialDistance/build.gradle
@@ -57,6 +57,10 @@ android {
             path "src/main/cpp/CMakeLists.txt"
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 repositories {
