--- a/SocialDistance/build.gradle
+++ b/SocialDistance/build.gradle
@@ -86,24 +86,24 @@ dependencies {
     apply plugin: 'kotlin-kapt'
 
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.core:core-ktx:1.6.0'
 
     // Google Service
-    implementation 'com.google.android.gms:play-services-base:17.4.0'
+    implementation 'com.google.android.gms:play-services-base:17.6.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.4.1"
 
     // Barcode Scanning (dynamically downloaded model in Google Play Services)
-    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:16.1.4'
+    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:16.2.0'
 
     // CameraX core library using the camera2 implementation
     def camerax_version = "1.0.0"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
-    implementation "androidx.camera:camera-view:1.0.0-alpha24"
+    implementation "androidx.camera:camera-view:1.0.0-alpha26"
 
     // Lifecycle
     def lifecycle_version = "2.3.1"
@@ -117,13 +117,13 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.5.0"
 
     // protobuf //DiagnosisKeyFileHelper
-    implementation 'com.google.protobuf:protobuf-javalite:3.11.1'
+    implementation 'com.google.protobuf:protobuf-javalite:3.14.0'
 
     // IOUtils //DiagnosisKeyFileHelper
     implementation 'commons-io:commons-io:2.6'
 
     // BaseEncoding //DiagnosisKeyFileHelper
-    implementation 'com.google.guava:guava:29.0-android'
+    implementation 'com.google.guava:guava:30.1.1-android'
 
     // DiagnosisKey
 //    annotationProcessor 'com.google.auto.value:auto-value:1.7.3'
@@ -134,9 +134,9 @@ dependencies {
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 
     // networking
-    implementation 'com.squareup.retrofit2:retrofit:2.6.4'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.4'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
     // Logger
     implementation 'io.github.microutils:kotlin-logging:1.7.4'
