--- a/SocialDistance/build.gradle
+++ b/SocialDistance/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -142,4 +146,11 @@ dependencies {
     // Logger
     implementation 'io.github.microutils:kotlin-logging:1.7.4'
     implementation 'com.github.tony19:logback-android:2.0.0'
+
+    // COSE
+    implementation 'org.bouncycastle:bcpkix-jdk15to18:1.69'
+    implementation 'com.augustcellars.cose:cose-java:1.1.0'
+
+    // Json
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 }
