--- a/SocialDistance/build.gradle
+++ b/SocialDistance/build.gradle
@@ -132,6 +132,7 @@ dependencies {
 
     // UI components
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+    implementation 'com.airbnb.android:lottie:5.0.3'
 
     // networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
