--- a/SocialDistance/build.gradle
+++ b/SocialDistance/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation "androidx.fragment:fragment-ktx:1.3.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.core:core-ktx:1.6.0'
 
