--- a/SocialDistance/build.gradle
+++ b/SocialDistance/build.gradle
@@ -138,6 +138,10 @@ dependencies {
     // UI components
     implementation 'com.tbuonomo:dotsindicator:4.2'
     implementation 'com.airbnb.android:lottie:5.0.3'
+    
+    // QR Genearator
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
+    implementation 'com.google.zxing:core:3.3.2'
 
     // networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
