--- a/SocialDistance/build.gradle
+++ b/SocialDistance/build.gradle
@@ -22,7 +22,7 @@ android {
         ndk {
             debugSymbolLevel 'FULL'
         }
-        resConfigs "zh-rTW", "zh-rCN", "in", "th", "tl", "vi"
+        resConfigs "zh-rTW", "zh-rCN", "in", "th", "tl", "vi", "ms", "my"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
